# rusty-pole

./: .env.example  Cargo.toml
migrations/: 20241124120902_initial.sql
src/: config.rs  main.rs
src/http/: error.rs  extractor.rs  mod.rs  users.rs
src/web/: app.rs
templates/: login.html  protected.html
